btn z-index fix

--- a/src/components/button/style/index.less
+++ b/src/components/button/style/index.less
@@ -29,6 +29,7 @@
 	cursor: pointer;
 	transition: 200ms ease-out;
 	transition-property: color, background-color, border;
+	z-index: 1;
 
 	&:hover,
 	&:focus {
